[package]
name = "devblog"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
maud = { version = "0.26", features = ["axum"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pulldown-cmark = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
figrs = "0.3"
include_dir = "0.7"
clap = { version = "4.5", features = ["derive"] }
